--- a/FourTeam/app/build.gradle
+++ b/FourTeam/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "fourteam.cck.com.fourteam"
-        minSdkVersion 26
+        minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -26,5 +26,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.hjm:BottomTabBar:1.1.1'
     testCompile 'junit:junit:4.12'
 }
