--- a/FourTeam/app/src/main/AndroidManifest.xml
+++ b/FourTeam/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="fourteam.cck.com.fourteam">
 
     <application
+        android:name=".app.Myapp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
