--- a/FourTeam/app/src/main/AndroidManifest.xml
+++ b/FourTeam/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fourteam.cck.com.fourteam">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".app.Myapp"
         android:allowBackup="true"
