--- a/FourTeam/app/build.gradle
+++ b/FourTeam/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     compile 'com.squareup.okio:okio:1.5.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.youth.banner:banner:1.4.2'
-    compile 'com.facebook.fresco:fresco:0.9.0+'
+    compile 'com.facebook.fresco:fresco:1.5.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.leifzhang:IjkLib:0.4.3'
