--- a/FourTeam/app/build.gradle
+++ b/FourTeam/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.leifzhang:IjkLib:0.4.3'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     testCompile 'junit:junit:4.12'
 }
