--- a/FourTeam/app/build.gradle
+++ b/FourTeam/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.leifzhang:IjkLib:0.4.3'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'com.github.mcxtzhang:ZLayoutManager:V1.1.0'
     testCompile 'junit:junit:4.12'
 }
